Added form feild and button.

--- a/ConvertTemperature.html
+++ b/ConvertTemperature.html
@@ -6,8 +6,18 @@
   <title>Convert a Tempeture</title>
   <meta name="description" content="Tempeture conversion">
   <meta name="author" content="vip2kea">
+    <script>
+      function convert () {
+        
+      }  
+  </script>
 </head>
 <body>
-  <script src="js/scripts.js"></script>
+  <h1> Temperture converter </h1>
+  <div>
+    <label> Celsius: <imput type="number"> </label>
+    <label> Fahrenheit: <imput type="number"> </label>
+  </div>
+      <button id="btnConvert> Convert </button>    
 </body>
 </html>
