--- a/converttemperature.html
+++ b/converttemperature.html
@@ -18,6 +18,6 @@
     <label> Celsius: <imput type="number"> </label>
     <label> Fahrenheit: <imput type="number"> </label>
   </div>
-      <button id="btnConvert> Convert </button>    
+      <button id="btnConvert"> Convert </button>    
 </body>
 </html>
