--- a/converttemperature.html
+++ b/converttemperature.html
@@ -15,8 +15,8 @@
 <body>
   <h1> Temperture converter </h1>
   <div>
-    <label> Celsius: <imput type="number"> </label>
-    <label> Fahrenheit: <imput type="number"> </label>
+    <label> Celsius: <input type="number"> </label>
+    <label> Fahrenheit: <input type="number"> </label>
   </div>
       <button id="btnConvert"> Convert </button>    
 </body>
